<resources>
    <string name="app_name">Ford CoPilot</string>
    <string name="headlamp_on_warning">Headlamps are on!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="not_available">N/A</string>
    <string name="location_not_available">We couldn\'t find your current location.</string>
    <string name="location">Location</string>
    <string name="speed">Speed</string>
    <string name="fuel">Fuel</string>
    <string name="fuel_stations">Fuel Stations</string>
    <string name="speed_info_label">Your speed:</string>
    <string name="speed_limit_info_label">Current speed limit:</string>
    <string name="fuel_percentage_label">Percentage:</string>
    <string name="out_of_fuel_label">Out-of-fuel in:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
